--- a/index.html
+++ b/index.html
@@ -234,6 +234,123 @@
 			</div>
 		</div>
 	</div>
+	<div class="category">
+		<div class="header-category">
+			<img src="img/title/title-6.png">
+		</div>
+		<div class="colors">
+			<a href="preview.html">
+			<div class="colors-items">
+				<img src="img/colors/Honda/Master Red.png">
+				<p>H 9231*</p>
+				<p>MASTER RED</p>
+				<p></p>
+			</div>
+			</a>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Deluxe Silver.png">
+				<p>H 9136*</p>
+				<p>DELUXE SILVER</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Stylish Red Matte.png">
+				<p>H 9281*</p>
+				<p>STYLISH RED MATTE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Scoopy Pink.png">
+				<p>H 9240*</p>
+				<p>SCOOPY PINK</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Amazing Blue.png">
+				<p>H 9288*</p>
+				<p>AMAZING BLUE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Pearl White.png">
+				<p>H 9188*</p>
+				<p>SILVER</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Stylish Matte Brown.png">
+				<p>H 9284</p>
+				<p>STYLISH MATTE BROWN</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Deluxe Blue.png">
+				<p>H 9315*</p>
+				<p>DELUXE BLUE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Repsol Orange.png">
+				<p>H 9237*</p>
+				<p>REPSOL ORANGE</p>
+				<p> <hr> warna dasar 9102 WHITE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Beat Orange.png">
+				<p>H 9355*</p>
+				<p>BEAT ORANGE</p>
+				<p> <hr> warna dasar 9102 WHITE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Electric Blue.png">
+				<p>H 9275*</p>
+				<p>ELECTRIC BLUE</p>
+				<p> <hr> warna dasar 9124 SILVER</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Scoopy Cream.png">
+				<p>H 9153*</p>
+				<p>SCOOPY CREAM</p>
+				<p> <hr> warna dasar 9102 WHITE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Scoopy Beige.png">
+				<p>H 9165*</p>
+				<p>SCOOPY BEIGE</p>
+				<p> <hr> warna dasar 9109 BLACK</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Pearl Lemon Yellow.png">
+				<p>H 9165*</p>
+				<p>PEARL LEMON YELLOW</p>
+				<p> <hr> warna dasar 9102 WHITE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Sporty Green.png">
+				<p>H 9416*</p>
+				<p>SPORTY GREEN</p>
+				<p> <hr> warna dasar 9102 WHITE</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Stylish Blue Matte.png">
+				<p>H 9283*</p>
+				<p>STYLISH BLUE MATTE</p>
+				<p> <hr> warna dasar 9124 SILVER</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Prestige Black.png">
+				<p>H 9110*</p>
+				<p>PRESTIGE BLACK</p>
+				<p> <hr> warna dasar 9109 BLACK</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/PCX Matte Grey.png">
+				<p>H 9280*</p>
+				<p>PCX MATTE GREY</p>
+				<p> <hr> warna dasar 9124 SILVER</p>
+			</div>
+			<div class="colors-items">
+				<img src="img/colors/Honda/Sporty Red.png">
+				<p>H 9417*</p>
+				<p>SPORTY RED</p>
+				<p> <hr> warna dasar 9102 WHITE</p>
+			</div>
+
+		</div>
+	</div>
 </main>
 </body>
 </html>
