--- a/preview.html
+++ b/preview.html
@@ -9,7 +9,7 @@
 	<title></title>
 </head>
 <body>
-<main class="main">
+<main class="">
 	<div class="preview">
 		<div class="preview-img" >
 			<img  src="img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg">
