--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<img src="img/SOLID COLORS/BOXER BLUE.jpg">
 					<li>9422</li>
 					<li>BOXER BLUE</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -109,7 +109,7 @@
 					<img src="img/SOLID COLORS/CHILLI RED.jpg">
 					<li>9462</li>
 					<li>CHILLI RED</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -117,7 +117,7 @@
 					<img src="img/SOLID COLORS/PETRONAS GREEN.jpg">
 					<li>9238</li>
 					<li>PETRONAS GREEN</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -125,7 +125,7 @@
 					<img src="img/SOLID COLORS/PREMIUM MAROON.jpg">
 					<li>9254</li>
 					<li>PREMIUM MAROON</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -133,7 +133,7 @@
 					<img src="img/SOLID COLORS/MAGENTA PINK.jpg">
 					<li>9433</li>
 					<li>MAGENTA PINK</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -141,7 +141,7 @@
 					<img src="img/SOLID COLORS/DARK GREEN.jpg">
 					<li>9432</li>
 					<li>DARK GREEN</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -149,7 +149,7 @@
 					<img src="img/SOLID COLORS/TIGER YELLOW.jpg">
 					<li>9425</li>
 					<li>TIGER YELLOW</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -157,7 +157,7 @@
 					<img src="img/SOLID COLORS/MASTER YELLOW.jpg">
 					<li>9431</li>
 					<li>MASTER YELLOW</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -165,7 +165,7 @@
 					<img src="img/SOLID COLORS/FORTUNE BLUE.jpg">
 					<li>9421</li>
 					<li>FORTUNE BLUE</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
 				</ul>
 				</div>
 				<div class="colors-items">
@@ -181,40 +181,52 @@
 			<img src="img/title/title-2.png">
 			<div class="colors">
 				<div class="colors-items">
+				<ul>
 					<img src="img/METALIC COLORS/BLACK METALLIC.png">
 					<li>9239</li>
 					<li>BLACK METALLIC</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/METALIC COLORS/SILVER GREY MET.jpg">
 					<li>9178</li>
 					<li>SILVER GREY MET</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/METALIC COLORS/MAYFAIR GREEN.jpg">
 					<li>9544</li>
 					<li>MAYFAIR GREEN</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/METALIC COLORS/SILVER METALLIC.jpg">
 					<li>9180</li>
 					<li>SILVER METALLIC</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/METALIC COLORS/YELLOW METALLIC.jpg">
 					<li>9239</li>
 					<li>YELLOW METALLIC</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/METALIC COLORS/MAGENTA BLUE.jpg">
 					<li>9215</li>
 					<li>MAGENTA BLUE</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 			</div>
 	</div>
@@ -224,44 +236,60 @@
 			</div>
 			<div class="colors">
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE BLACK.png">
 					<li>9304</li>
 					<li>CANDYTONE BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE ORANGE.jpg">
 					<li>9305</li>
 					<li>CANDYTONE ORANGE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE PINK.jpg">
 					<li>9306</li>
 					<li>CANDYTONE PINK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE GREEN.jpg">
 					<li>9307</li>
 					<li>CANDYTONE GREEN</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE YELLOW.jpg">
 					<li>9308</li>
 					<li>CANDYTONE YELLOW</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE BLUE.jpg">
 					<li>9309</li>
 					<li>CANDYTONE BLUE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE VIOLET.jpg">
 					<li>9310</li>
 					<li>CANDYTONE VIOLET</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/CANDYTONE COLORS/CANDYTONE RED.jpg">
 					<li>9311</li>
 					<li>CANDYTONE RED</li>
+				</ul>
 				</div>
 			</div>
 	</div>
@@ -271,22 +299,28 @@
 			</div>
 			<div class="colors">
 				<div class="colors-items putih">
+				<ul>
 					<img src="img/colors/Clear/clear gloss.png">
 					<li>9128</li>
 					<li>CLEAR GLOSS <br>+ACTIVATOR</li>
-					<li> <hr> Untuk hasil warna kilap gunakan CLEAR GLOSS 9128</li>
+					<li>  Untuk hasil warna kilap gunakan CLEAR GLOSS 9128</li>
+				</ul>
 				</div>
 				<div class="colors-items putih">
+				<ul>
 					<img src="img/colors/Clear/clear semi doff.png">
 					<li>9129</li>
 					<li>CLEAR SEMI DOFF</li>
-					<li> <hr> Untuk hasil warna semi doff gunakan CLEAR SEMI DOFF 9129</li>
+					<li>  Untuk hasil warna semi doff gunakan CLEAR SEMI DOFF 9129</li>
+				</ul>
 				</div>
 				<div class="colors-items putih">
+				<ul>
 					<img src="img/colors/Clear/clear doff.png">
 					<li>9130</li>
 					<li>CLEAR DOFF</li>
-					<li> <hr> Untuk hasil warna doff gunakan CLEAR DOFF 9130</li>
+					<li>  Untuk hasil warna doff gunakan CLEAR DOFF 9130</li>
+				</ul>
 				</div>
 			</div>
 	</div>
@@ -296,35 +330,47 @@
 			</div>
 			<div class="colors">
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Fluores/Flourescent Pink.png">
 					<li>F 9011**</li>
 					<li>FLUORESECENT PINK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Fluores/Flourescent Green.png">
 					<li>F 9012**</li>
 					<li>FLUORESECENT GREEN</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Fluores/Flourescent Orange.png">
 					<li>F 9013**</li>
 					<li>FLUORESECENT ORANGE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Fluores/Flourescent Yellow.png">
 					<li>F 9014**</li>
 					<li>FLUORESECENT YELLOW</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Fluores/Flourescent Red.png">
 					<li>F 9011**</li>
 					<li>FLUORESECENT RED</li>
+				</ul>
 				</div>
 				<div class="colors-items putih">
+				<ul>
 					<img src="img/colors/Primer Fluores/Fluorescent Premier.png">
 					<li>F 9000*</li>
 					<li>FLUORESECENT PRIMER</li>
-					<li> <hr> Warna dasar Fluorescent</li>
+					<li>  Warna dasar Fluorescent</li>
+				</ul>
 				</div>
 			</div>
 	</div>
@@ -335,112 +381,150 @@
 			<div class="colors">
 				<a href="preview.html">
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Master Red.png">
 					<li>H 9231*</li>
 					<li>MASTER RED</li>
 					<li></li>
+				</ul>
 				</div>
 				</a>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Deluxe Silver.png">
 					<li>H 9136*</li>
 					<li>DELUXE SILVER</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Stylish Red Matte.png">
 					<li>H 9281*</li>
 					<li>STYLISH RED MATTE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Scoopy Pink.png">
 					<li>H 9240*</li>
 					<li>SCOOPY PINK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Amazing Blue.png">
 					<li>H 9288*</li>
 					<li>AMAZING BLUE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Pearl White.png">
 					<li>H 9188*</li>
 					<li>SILVER</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Stylish Matte Brown.png">
 					<li>H 9284</li>
 					<li>STYLISH MATTE BROWN</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Deluxe Blue.png">
 					<li>H 9315*</li>
 					<li>DELUXE BLUE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Repsol Orange.png">
 					<li>H 9237*</li>
 					<li>REPSOL ORANGE</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Beat Orange.png">
 					<li>H 9355*</li>
 					<li>BEAT ORANGE</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Electric Blue.png">
 					<li>H 9275*</li>
 					<li>ELECTRIC BLUE</li>
-					<li> <hr> warna dasar 9124 SILVER</li>
+					<li>  warna dasar 9124 SILVER</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Scoopy Cream.png">
 					<li>H 9153*</li>
 					<li>SCOOPY CREAM</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Scoopy Beige.png">
 					<li>H 9165*</li>
 					<li>SCOOPY BEIGE</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Pearl Lemon Yellow.png">
 					<li>H 9165*</li>
 					<li>PEARL LEMON YELLOW</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Sporty Green.png">
 					<li>H 9416*</li>
 					<li>SPORTY GREEN</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Stylish Blue Matte.png">
 					<li>H 9283*</li>
 					<li>STYLISH BLUE MATTE</li>
-					<li> <hr> warna dasar 9124 SILVER</li>
+					<li>  warna dasar 9124 SILVER</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Prestige Black.png">
 					<li>H 9110*</li>
 					<li>PRESTIGE BLACK</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/PCX Matte Grey.png">
 					<li>H 9280*</li>
 					<li>PCX MATTE GREY</li>
-					<li> <hr> warna dasar 9124 SILVER</li>
+					<li>  warna dasar 9124 SILVER</li>
+				</ul>
 				</div>
 				<div class="colors-items">
+				<ul>
 					<img src="img/colors/Honda/Sporty Red.png">
 					<li>H 9417*</li>
 					<li>SPORTY RED</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 			</div>
 	</div>
@@ -451,114 +535,103 @@
 			<div class="colors">
 				<a href="preview.html">
 				<div class="colors-items">
-					<img src="img/colors/Honda/Master Red.png">
-					<ul>
-						<li>Y 9295*</li>
-						
-					</ul>
+				<ul>
+					<img src="img/colors/Yamaha/Atlatis Blue.png">
+					<li>Y 9295*</li>
+					<li>ATLANTIS blue</li>
+				</ul>	
 				</div>
 				</a>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Deluxe Silver.png">
-					<li>H 9136*</li>
-					<li>DELUXE SILVER</li>
+				<ul>
+					<img src="img/colors/Yamaha/Mio Pink.png">
+					<li>Y 9242*</li>
+					<li>Mio Pink</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Stylish Red Matte.png">
-					<li>H 9281*</li>
-					<li>STYLISH RED MATTE</li>
+				<ul>
+					<img src="img/colors/Yamaha/Sniper Green.png">
+					<li>Y 9245*</li>
+					<li>Sniper Green</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Scoopy Pink.png">
-					<li>H 9240*</li>
-					<li>SCOOPY PINK</li>
+				<ul>
+					<img src="img/colors/Yamaha/Prestige Silver.png">
+					<li>Y 9155*</li>
+					<li>Prestige Silver</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Amazing Blue.png">
-					<li>H 9288*</li>
-					<li>AMAZING BLUE</li>
+				<ul>
+					<img src="img/colors/Yamaha/Brilliant Red.png">
+					<li>Y 9138*</li>
+					<li>Brilliant Red</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Pearl White.png">
-					<li>H 9188*</li>
-					<li>SILVER</li>
+				<ul>
+					<img src="img/colors/Yamaha/Hunter Green Mette.png">
+					<li>Y 9117*</li>
+					<li>Hunter Green Matte</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Stylish Matte Brown.png">
-					<li>H 9284</li>
-					<li>STYLISH MATTE BROWN</li>
+				<ul>
+					<img src="img/colors/Yamaha/Nmax Matte Silver.png">
+					<li>Y 9214*</li>
+					<li>Nmax Matte Grey</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Deluxe Blue.png">
-					<li>H 9315*</li>
-					<li>DELUXE BLUE</li>
+				<ul>
+					<img src="img/colors/Yamaha/Nmax Matte Black.png">
+					<li>Y 9133*</li>
+					<li>Nmax Matte Black</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Repsol Orange.png">
-					<li>H 9237*</li>
-					<li>REPSOL ORANGE</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+				<ul>
+					<img src="img/colors/Yamaha/Sporty Brown Matte.png">
+					<li>Y 9163*</li>
+					<li>Sporty Brown Matte</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Beat Orange.png">
-					<li>H 9355*</li>
-					<li>BEAT ORANGE</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+				<ul>
+					<img src="img/colors/Yamaha/Sporty Tosca.png">
+					<li>Y 9164*</li>
+					<li>Sporty Tosca</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Electric Blue.png">
-					<li>H 9275*</li>
-					<li>ELECTRIC BLUE</li>
-					<li> <hr> warna dasar 9124 SILVER</li>
+				<ul>
+					<img src="img/colors/Yamaha/Excellent Blue.png">
+					<li>Y 9312*</li>
+					<li>Excellent Blue</li>
+					<li>  warna dasar 9124 SILVER</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Scoopy Cream.png">
-					<li>H 9153*</li>
-					<li>SCOOPY CREAM</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
+				<ul>
+					<img src="img/colors/Yamaha/Dark Bluish Grey.png">
+					<li>Y 9179*</li>
+					<li>Dark Bluish Grey</li>
+					<li>  warna dasar 9102 WHITE</li>
+				</ul>
 				</div>
 				<div class="colors-items">
-					<img src="img/colors/Honda/Scoopy Beige.png">
-					<li>H 9165*</li>
-					<li>SCOOPY BEIGE</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
+				<ul>
+					<img src="img/colors/Yamaha/Racing Yellow.png">
+					<li>Y 9189*</li>
+					<li>Racing Yellow</li>
+					<li>  warna dasar 9109 BLACK</li>
+				</ul>
 				</div>
-				<div class="colors-items">
-					<img src="img/colors/Honda/Pearl Lemon Yellow.png">
-					<li>H 9165*</li>
-					<li>PEARL LEMON YELLOW</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
-				</div>
-				<div class="colors-items">
-					<img src="img/colors/Honda/Sporty Green.png">
-					<li>H 9416*</li>
-					<li>SPORTY GREEN</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
-				</div>
-				<div class="colors-items">
-					<img src="img/colors/Honda/Stylish Blue Matte.png">
-					<li>H 9283*</li>
-					<li>STYLISH BLUE MATTE</li>
-					<li> <hr> warna dasar 9124 SILVER</li>
-				</div>
-				<div class="colors-items">
-					<img src="img/colors/Honda/Prestige Black.png">
-					<li>H 9110*</li>
-					<li>PRESTIGE BLACK</li>
-					<li> <hr> warna dasar 9109 BLACK</li>
-				</div>
-				<div class="colors-items">
-					<img src="img/colors/Honda/PCX Matte Grey.png">
-					<li>H 9280*</li>
-					<li>PCX MATTE GREY</li>
-					<li> <hr> warna dasar 9124 SILVER</li>
-				</div>
-				<div class="colors-items">
-					<img src="img/colors/Honda/Sporty Red.png">
-					<li>H 9417*</li>
-					<li>SPORTY RED</li>
-					<li> <hr> warna dasar 9102 WHITE</li>
-				</div>
+				
 			</div>
 	</div>
 </div>
