--- a/preview.html
+++ b/preview.html
@@ -6,13 +6,16 @@
 	<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 	<link rel="stylesheet" type="text/css" href="css/katalog.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
 	<title></title>
 </head>
 <body>
-<main class="">
+	
+<main class="content">
 	<div class="preview">
 		<div class="preview-img" >
-			<img  src="img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg">
+			<img  class="imgPreview" src="img/Color Chat Motor/Solid Color/Color Chart_Solid Color_Black.jpg">
 		</div>
 		<div class="preview-btn">
 			<button class="btn">Prev</button>
@@ -125,7 +128,23 @@
 				<p>9303</p>
 				<p>ARMY GREEN</p>
 			</div>
+		</div>
 	</div>
+	<div class="btn-group">
+		<div class="play">	
+			<i class="fa-solid fa-circle-play fa-2xl"></i>
+		</div>
+		<hr>
+		<div class="back">
+			<i class=""><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-back-up" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+	   		<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+	   		<path d="M9 14l-4 -4l4 -4"></path>
+	  		 <path d="M5 10h11a4 4 0 1 1 0 8h-1"></path>
+			</svg>
+			</i>
+		</div>
+	</div>
+
 </main>
 </body>
 </html>
